# Distributed-Document-Intelligence-Engine

./: .gitignore  AGENTS.md  README.md  pyproject.toml
adapters/: README.md
apps/api/: README.md  pyproject.toml
apps/api/src/eixo_api/: __init__.py  app.py  application.py  configuration.py  context.py  dependencies.py  error_handlers.py  errors.py  lifecycle.py  main.py  middleware.py  responses.py  upload.py
apps/api/src/eixo_api/routers/: __init__.py  diagnostic_lab.py  documents.py  extractions.py  health.py
apps/api/tests/: test_rest_api.py
apps/cli/: README.md  pyproject.toml
apps/cli/src/eixo_cli/: bootstrap.py  errors.py  exit_codes.py  main.py  sources.py
apps/cli/src/eixo_cli/commands/: __init__.py  inspect.py  jobs.py  parse.py  pdf.py  process.py
apps/cli/src/eixo_cli/output/: __init__.py  console_renderer.py  json_renderer.py  renderer.py
apps/cli/tests/: test_cli.py
contracts/: README.md
docs/: README.md
docs/api/: pdf-parsing.md
docs/architecture/: api-and-library.md  canonical-geometry.md  document-engine.md  ingestion-and-content-identity.md  ingestion-security.md  kernel-v0.md  local-storage-and-document-lifecycle.md  native-pdf-scene-artifact.md  overview.md  pdf-image-occurrences.md  pdf-images.md  pdf-native-text-model.md  pdf-object-model.md  pdf-page-scene.md  pdf-provider-contracts.md  pdf-technical-inspector.md  pdf-typography.md  pdf-vectors.md  persistent-local-jobs.md  repository-structure.md  runtimes-and-workers.md
docs/archive/: README.md  original-brand-notes-2026-07-20.txt  original-implementation-roadmap-2026-07-20.txt  original-master-context-2026-07-17.md  original-processing-flow-2026-07-17.mmd.txt  original-revised-phases-2026-07-20.txt
docs/cli/: pdf-parsing.md
docs/context/: brand.md  master-context.md
docs/decisions/: README.md  adr-0001-modular-architecture.md  adr-0002-api-and-library-from-the-start.md  adr-0003-canonical-document-model.md  adr-0004-adaptive-processing.md  adr-0005-required-evidence.md  adr-0006-local-and-temporal-runtimes.md  adr-0007-modules-before-microservices.md  adr-0008-canonical-geometry.md
docs/guides/: README.md  cli.md  pdf-diagnostic-preview.md  pdf-inspection.md  pdf-parsing.md  pdf-profiles.md  pdf-real-validation-lab.md  safe-file-handling.md  using-as-library.md  using-document-engine.md  using-local-runtime.md  using-the-api.md
docs/providers/: pdf-image-capabilities.md  pdf-provider-capabilities.md  pdf-text-capabilities.md  (+1 more)
examples/: README.md
tests/: update_pdf_goldens.py
tools/: __init__.py  build_sdk.py  eixo_dev.py  pdf_golden.py
(+117 files in other folders)
